ingress/ing.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  #annotations:
          #ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: test.com
    http:
      paths:
      - backend:
          service:
            name: nginx-i-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: nginx-am-svc
            port:
              number: 80
        path: /am/
        pathType: Prefix
