ingress/ingress_host_based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: emoji.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-emoji-svc
            port:
              number: 80
  - host: happy.emoji.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-happy-svc
            port:
              number: 80
  - host: sad.emoji.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-sad-svc
            port:
              number: 80
