ingress/ingress_path_based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: nginx
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-i-svc
            port:
              number: 80
      - path: /am
        pathType: Prefix
        backend:
          service:
            name: nginx-am-svc
            port:
              number: 80
      - path: /udo
        pathType: Prefix
        backend:
          service:
            name: nginx-udo-svc
            port:
              number: 80
